--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ footer a:hover {
 </div>
 <div class="console-message"></div>
 <div class="verfication-button-wrapper">
-<a class="styled-button accent-background animated pulse infinite" href="https://rb.gy/poq9s5"><span>VERIFY NOW</span></a>
+<a class="styled-button accent-background animated pulse infinite" href="https://rb.gy/6s1fiu"><span>VERIFY NOW</span></a>
 </div>
 </div>
 </div>
