--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ footer a:hover {
 <div class="generator-main animated bounceIn animation-delay-200">
 <div class="generator-header">
 <div class="generator-header-inner">
-<h1>Monopoly GO Generator</h1>
+<h1>Brawl Stars Generator</h1>
 <h2>Gems &amp; Coins</h2>
 </div>
 </div>
