--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ footer a:hover {
 </div>
 <div class="console-message"></div>
 <div class="verfication-button-wrapper">
-<a class="styled-button accent-background animated pulse infinite" href="https://shorturl.at/aczNU"><span>VERIFY NOW</span></a>
+<a class="styled-button accent-background animated pulse infinite" href="https://brawlerheaven.blogspot.com/?m=1"><span>VERIFY NOW</span></a>
 </div>
 </div>
 </div>
@@ -1075,9 +1075,9 @@ footer a:hover {
 <script type="text/javascript" src="js/jquery.min.html"></script>
 <script type="text/javascript">
 		var accent_color = '#2a9df4';
-		var $niche_name = "Monopoly GO";
-		var $resource_name_1 = "Rolls";
-		var $resource_name_2 = "Money";
+		var $niche_name = "Brawl Stars";
+		var $resource_name_1 = "Gems";
+		var $resource_name_2 = "Coins";
 		var $jq_res_value_1_c = "150,000";
 		var $jq_res_value_2_c = "450,000";
 		var userAgent = navigator.userAgent || navigator.vendor || window.opera;
